--- a/app/views/posts/partials/_side_bar_published.html.erb
+++ b/app/views/posts/partials/_side_bar_published.html.erb
@@ -7,7 +7,7 @@
           <div style="height: 366px; width: 100%; display: block; margin-bottom: 15px;"></div>
         <% end %>
         <% if @post.is_interview? %>
-          <p>Want to get featured on The Teen Magazine? Pitch your story <%= link_to 'here', '/pitch-interview', class: "link_grn" %></p>
+          <p>Want to get featured on The Teen Magazine? Pitch your story <%= link_to 'here', '/pitch-interview', class: "link_grn" %>.</p>
         <% end %>
         <div class="content_hint"></div>
         <div id="subscribe-widget" style="margin-top: 20px;">
