--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -26,7 +26,7 @@
         </a>
       </div>
       <% if @category.slug.eql? 'interviews' %>
-        <p class="text-center">Want to get featured on The Teen Magazine? Pitch your story <%= link_to 'here', '/pitch-interview', class: "link_grn" %></p>
+        <p class="text-center">Want to get featured on The Teen Magazine? Pitch your story <%= link_to 'here', '/pitch-interview', class: "link_grn" %>.</p>
       <% end %>
       <%== pagy_nav(@pagy).html_safe %>
     </div>
