--- a/app/views/pitches/pitch_interview.html.erb
+++ b/app/views/pitches/pitch_interview.html.erb
@@ -23,6 +23,9 @@
       <%= f.text_field :contact_email, placeholder: "Contact email" %>
       <p>List your main social media accounts:</p>
       <%= f.text_field :influencer_social_media, placeholder: "Instagram: @madelyncline, TikTok: @madelyn_cline" %>
+      <p>What description fits you/your client the best?
+      <%= f.select(:interview_kind, ['Actor', 'Actress', 'Author', 'Artist', 'Activist', 'Content Creator', 'Influencer', 'Musician', 'Youtuber', 'Other'], {prompt: "None selected"}) %></p>
+      <br>
       <p>
         An interview is much more likely to be picked if you can share the article once published on The Teen Magazine. 
         Please indicate the social media platform you can share the article link. (You will get to see the draft before it's published.)
