added field to interview kind

--- a/app/views/pitches/pitch_interview.html.erb
+++ b/app/views/pitches/pitch_interview.html.erb
@@ -24,7 +24,7 @@
       <p>List your main social media accounts:</p>
       <%= f.text_field :influencer_social_media, placeholder: "Instagram: @madelyncline, TikTok: @madelyn_cline" %>
       <p>What description fits you/your client the best?
-      <%= f.select(:interview_kind, ['Actor', 'Actress', 'Author', 'Artist', 'Activist', 'Content Creator', 'Influencer', 'Musician', 'Youtuber', 'Other'], {prompt: "None selected"}) %></p>
+      <%= f.select(:interview_kind, ['Actor', 'Actress', 'Author', 'Artist', 'Activist', 'Content Creator', 'Entrepreneur', 'Influencer', 'Musician', 'Youtuber', 'Other'], {prompt: "None selected"}) %></p>
       <br>
       <p>
         An interview is much more likely to be picked if you can share the article once published on The Teen Magazine. 
