added field of follower count to interview request form

--- a/app/views/pitches/_pitch_interview_card.html.erb
+++ b/app/views/pitches/_pitch_interview_card.html.erb
@@ -19,8 +19,10 @@
     </h4>
     <p class="card-text"> Pitched on <%= pitch.created_at.strftime("%m-%d-%Y") %></p>
     <% if pitch.platform_to_share.present? && !(pitch.platform_to_share.eql? "None selected") %>
-      <span class="badge badge-default">Will share on social media</span>
-      <span class="badge badge-default editor_label"><%= pitch.platform_to_share&.chomp('(preferred)')%></span>
+      <span class="badge badge-pill badge-success">Will share on social media</span>
+    <% end %>
+    <% if pitch.following_level.present? %>
+      <span class="badge badge-pill badge-info"><%= pitch.following_level %> followers</span>
     <% end %>
     <% if pitch.influencer_social_media.present? %>
       <p class="card-text"><b>Social media: <%= pitch.influencer_social_media&.truncate_words(20) %> </b></p>
