--- a/app/views/pitches/_form.html.erb
+++ b/app/views/pitches/_form.html.erb
@@ -25,6 +25,8 @@
     <div class="margin_flds">
       <% @prompt = current_user.editor? ? "Select a Deadline" : "Set a deadline (Optional)" %>
       <% if @pitch.is_interview? %>
+        <p>How many followers does you/your client have?
+          <%= f.select(:following_level, ['less than 25k', 'between 25k and 100k', 'between 100k and 500k', 'between 500k and 1 million', 'over 1 million'], {prompt: "None selected"}) %></p>
         <p>What description fits you/your client the best?
           <%= f.select(:interview_kind, ['Actor', 'Actress', 'Author', 'Artist', 'Activist', 'Content Creator', 'Influencer', 'Musician', 'Youtuber', 'Other'], {prompt: "None selected"}) %>
         </p>
@@ -32,7 +34,8 @@
           Please indicate the social media platform you can share the article link. (You will get to see the draft before it's published.)
         </p>
         <%= f.select(:platform_to_share, ['None selected', 'Instagram story w/ link (preferred)', 'Instagram bio link (preferred)', 'TikTok bio link (preferred)', 'Facebook post', 'Youtube community post', 'Twitter tweet', 'Twitter bio', 'Pinterest post', 'Snapchat post', 'LinkedIn post'], {prompt: "None selected"}) %>
-        <br>
+        <p>Admin notes about this pitch</p>
+          <%= f.text_area :admin_notes, placeholder: "No notes" %>
         <%= f.select(:deadline, options_for_select(["6 weeks", "8 weeks"], [6, 8]), {prompt: @prompt}, {:class => "d-inline"}) %>
       <% else %>
         <%= f.select(:deadline, options_for_select(["2 weeks", "4 weeks"], [2, 4]), {prompt: @prompt}, {:class => "d-inline"}) %>
