--- a/app/views/pitches/_interview_explanation.html.erb
+++ b/app/views/pitches/_interview_explanation.html.erb
@@ -1,6 +1,6 @@
 <div class="alert alert-info" role="alert">
   <p class="m-0 mt-2">
-    This interview pitch was submitted by a content creator or PR agent. 
+    This interview pitch was submitted externally by the potential interviewee or their talent manager. 
     After claiming an interview, follow these steps: 
   </p>
   <ol>
