--- a/app/views/pitches/pitch_interview.html.erb
+++ b/app/views/pitches/pitch_interview.html.erb
@@ -23,7 +23,7 @@
       <%= f.text_field :contact_email, placeholder: "Contact email" %>
       <p>List your main social media accounts:</p>
       <%= f.text_field :influencer_social_media, placeholder: "Instagram: @madelyncline, TikTok: @madelyn_cline" %>
-      <p>How many followers does you/your client have?
+      <p>How many total followers do you have?
         <%= f.select(:following_level, ['less than 25k', 'between 25k and 100k', 'between 100k and 500k', 'between 500k and 1 million', 'over 1 million'], {prompt: "None selected"}) %></p>
       <br>
       <p>What description fits you/your client the best?
