--- a/app/views/pitches/_pitch_interview_card.html.erb
+++ b/app/views/pitches/_pitch_interview_card.html.erb
@@ -18,10 +18,10 @@
       <%= link_to "Interview with #{pitch.title}#{" (" << pitch.interview_kind << ")" unless pitch.interview_kind.nil?}", pitch, style: "color: black; text-decoration: none;" %>
     </h4>
     <p class="card-text"> Pitched on <%= pitch.created_at.strftime("%m-%d-%Y") %></p>
-    <% if pitch.platform_to_share.present? && !(pitch.platform_to_share.eql? "None selected") %>
-      <span class="badge badge-pill badge-success">Will share on social media</span>
-    <% end %>
-    <% if pitch.following_level.present? %>
+    <% if pitch.following_level.present? && (!pitch.following_level.eql? 'less than 25k')%>
+      <% if pitch.platform_to_share.present? && !(pitch.platform_to_share.eql? "None selected") %>
+        <span class="badge badge-pill badge-success">Will share on social media</span>
+      <% end %>
       <span class="badge badge-pill badge-info"><%= pitch.following_level %> followers</span>
     <% end %>
     <% if pitch.influencer_social_media.present? %>
