highlighted message above interviews

--- a/app/views/pitches/interviews.html.erb
+++ b/app/views/pitches/interviews.html.erb
@@ -2,7 +2,7 @@
   <div class="flex_container_mobile_reverse_order">
     <div>
       <h1 class="pitch_ttl">Interview Requests</h1>
-      <i>These interviews are submitted externally by PR agents and content creators. Only claim the interviews you are excited to write about and think should be featured on The Teen Magazine. Just 
+      <i style="background-color: #FCD04D;">These interviews are submitted externally by talent managers and creators. Only claim the interviews you are excited to write about and think should be featured on The Teen Magazine. Just 
       because an interview request was submitted does <i>not</i> mean they should be featured.</i>
       <br>
       <% if @pitches.count.eql? 0 %>
