added invite email to becoem interviewer

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -14,7 +14,10 @@
 }
 
 .text-decoration-underline {
-    text-decoration: underline;
+    text-decoration: underline !important;
+    &:hover {
+        text-decoration: underline !important;
+    }
 }
 
 .h1,
