--- a/app/views/pages/criteria.html.erb
+++ b/app/views/pages/criteria.html.erb
@@ -36,9 +36,8 @@
   <p class="question">How can I change my password? </p>
   <p>You can change your password  <a target="_blank" href="/users/edit">here</a>.</p>
 
-  <p class="question">I have someone I want to interview. How do I reach out to them, and ask for an interview?</p>
-  <p>Our interview team conducts all interviews on The Teen Magazine. Please apply to our interview team through our <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScDJe80_E686pG1L7R5w-84HHZcotFmuBSyQV5rqUB2jUQTag/viewform">Google form</a>.
-    Please note that applications are accepted at the end of every month and writers who are not active in the interview group are removed the following month.</p>
+  <p class="question">How can I interview someone on The Teen Magazine?</p>
+  <p>Right now, our interview team is invite-only but opportunities to join will expand in the future. If you really would like to join our team earlier, you can contact Mia at mia@theteenmagazine.com.</p>
 
   <p class="question">Have a question that wasn't answered here?</p>
   <p>Email us at editors@theteenmagazine.com or message one of the editors in the <a href="https://www.facebook.com/groups/615063885673363/">Facebook group</a>.</p>
@@ -53,7 +52,6 @@
 
 <script type="text/javascript">
   $(document).ready(function(){
-    $.fn.triggerCheck();
     $(window).on('scroll',function(){
         $.fn.triggerCheck();
     });
