--- a/app/views/users/interviewers.html.erb
+++ b/app/views/users/interviewers.html.erb
@@ -1,5 +1,5 @@
 <div class="flex_horizontal center">
-  <h1 id="page_title" style="margin-bottom: -20px; border-bottom: none;">Editors</h1>
+  <h1 id="page_title" style="margin-bottom: -20px; border-bottom: none;">Interviewers</h1>
 </div>
 <div id="posts_wrapper" class="skinny_wrapper mb-4">
   <div class="flex_horizontal">
@@ -8,17 +8,17 @@
     <% end %>
   </div>
   <% if @query.present? %>
-    <h2>Searching for editor... <span style="background-color: #FCD04D"><%= @query %></span></h2>
+    <h2>Searching for interviewer... <span style="background-color: #FCD04D"><%= @query %></span></h2>
   <% end %>
-  <% @editors.each do | user | %>
-    <% if user != nil %>
-      <div class="flex--profile">
-        <% if user.profile.attached? %>
-          <%= image_tag(user.profile.variant(resize_to_fill: [100, 100], format: 'webp'), :class => "profile_img") %>
-        <% else %>
-          <%= image_tag("profile_image.jpg", :class => "profile_img") %>
-        <% end %>
-        <div class="info">
+  <% @interviewers.each do | user | %>
+      <% if user != nil %>
+        <div class="flex--profile">
+          <% if user.profile.attached? %>
+            <%= image_tag(user.profile.variant(resize_to_fill: [100, 100], format: 'webp'), :class => "profile_img") %>
+          <% else %>
+            <%= image_tag("profile_image.jpg", :class => "profile_img") %>
+          <% end %>
+          <div class="info">
           <h2 style="margin-bottom: 5px; display: inline;">
             <%= link_to(user.full_name, "/editors/#{user.slug}") %>
           </h2>
@@ -32,24 +32,21 @@
             <br>
             <%= render_async_cache get_editor_stats_path(id: user) %>
           <% end %>
-          <p class="description_user" style="margin-top: 5px;"><%= user.description %></p>
-          <% if current_user.admin? %>
-            <div>
-              <h6 class="mt-2" style="margin: 0; opacity: 50%;">
-                <% if user.last_sign_in_at.nil? %>
-                  Never signed in (admin only)
-                <% else %>
-                  Last active <%= time_ago_in_words(user.last_sign_in_at) %> ago (admin only)
-                  <% if current_user.admin? %>
-                    <%= link_to "invite to interview team", "#"  %>
+            <p class="description_user" style="margin-top: 5px;"><%= user.description %></p>
+            <% if current_user.admin? %>
+              <div>
+                <h6 class="mt-2" style="margin: 0; opacity: 50%;">
+                  <% if user.last_sign_in_at.nil? %>
+                    Never signed in (admin only)
+                  <% else %>
+                    Last active <%= time_ago_in_words(user.last_sign_in_at) %> ago (admin only)
                   <% end %>
-                <% end %>
-              </h6>
-            </div>
-          <% end %>
+                </h6>
+              </div>
+            <% end %>
+          </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
   <% end %>
   <%== pagy_nav(@pagy).html_safe %>
 </div>
