--- a/app/views/layouts/partials/_writer-dropdown-menu.html.erb
+++ b/app/views/layouts/partials/_writer-dropdown-menu.html.erb
@@ -4,30 +4,34 @@
     <div class="dropdown-divider"></div>
   <% end %>
   <% if current_user.editor? %>
-     <a href="/editors/<%= current_user.slug %>" class="dropdown-item">Editor Dashboard
-       <% if @unseen_editor_dashboard_cnt > 0 %>
-        <span class="sec counter counter-sm"></span><p><%= @unseen_editor_dashboard_cnt %> new</p>
-       <% end %>
-     </a>
+    <a href="/editors/<%= current_user.slug %>" class="dropdown-item">Editor Dashboard
+      <% if @unseen_editor_dashboard_cnt > 0 %>
+        <span class="sec counter counter-sm"></span>
+        <p><%= @unseen_editor_dashboard_cnt %> new</p>
+      <% end %>
+    </a>
   <% elsif (!current_user.partner? && (current_user.is_new?)) %>
-      <a href="<%= pitches_path(user_id: current_user.id) %>" class="dropdown-item">My Pitches</a>
+    <a href="<%= pitches_path(user_id: current_user.id) %>" class="dropdown-item">My Pitches</a>
   <% end %>
   <% if !current_user.partner? %>
     <% if current_user.is_marketer? %>
       <a href="/interviews" class="dropdown-item">Interview Requests
-      <% if @unseen_interviews_cnt > 0 %>
-        <span class="sec counter counter-sm"></span><p><%= @unseen_interviews_cnt %> new</p>
-      <% end %>
-    </a>
+        <% if @unseen_interviews_cnt > 0 %>
+          <span class="sec counter counter-sm"></span>
+          <p><%= @unseen_interviews_cnt %> new</p>
+        <% end %>
+      </a>
     <% end %>
     <a href="/pitches" class="dropdown-item">Unclaimed Pitches
       <% if @unseen_pitches_cnt > 0 %>
-        <span class="sec counter counter-sm"></span><p><%= @unseen_pitches_cnt %> new</p>
+        <span class="sec counter counter-sm"></span>
+        <p><%= @unseen_pitches_cnt %> new</p>
       <% end %>
     </a>
     <a href="/community" class="dropdown-item">Community
       <% if @unseen_shared_drafts_cnt > 0 %>
-        <span class="sec counter counter-sm"></span><p><%= @unseen_shared_drafts_cnt %> new</p>
+        <span class="sec counter counter-sm"></span>
+        <p><%= @unseen_shared_drafts_cnt %> new</p>
       <% end %>
     </a>
   <% end %>
@@ -37,28 +41,28 @@
   <% if current_user.admin? %>
     <a href="/applies" class="dropdown-item">Writer Applications
       <% if @unseen_applications_cnt > 0 %>
-        <span class="sec counter counter-sm"></span><p><%= @unseen_applications_cnt %> new</p>
+        <span class="sec counter counter-sm"></span>
+        <p><%= @unseen_applications_cnt %> new</p>
       <% end %>
     </a>
   <% end %>
   <div class="dropdown-divider"></div>
   <% if current_user.editor? %>
-    <%= link_to "Writers", users_path, class: "dropdown-item" %>
-  <% elsif !current_user.partner? %>
-    <%= link_to "Review Onboarding", onboarding_path(:step => "welcome"), class: "dropdown-item" %>
+    <%= link_to "Writer Team", users_path, class: "dropdown-item" %>
+    <%= link_to "Editor Team", "/editors", class: "dropdown-item" %>
   <% end %>
-  <% if current_user.admin? %>
-    <%= link_to "Editors", "/editors", class: "dropdown-item" %>
-    <%= link_to "Partners", "/partners", class: "dropdown-item" %>
+  <% if current_user.is_marketer? %>
+    <%= link_to "Interviewer Team", "/interviewers", class: "dropdown-item" %>
+    <% if current_user.admin? %>
+      <%= link_to "Partners", "/partners", class: "dropdown-item" %>
+    <% elsif !current_user.partner? %>
+      <%= link_to "Review Onboarding", onboarding_path(:step => "welcome"), class: "dropdown-item" %>
+    <% end %>
+    <div class="dropdown-divider"></div>
   <% end %>
   <% @edit_path = current_user.partner ? "/partners/#{current_user.slug}/edit" : edit_user_path(current_user) %>
   <%= link_to "Edit Profile", @edit_path, class: "dropdown-item" %>
   <%= link_to "Change Password", edit_user_registration_path, class: "dropdown-item" %>
   <div class="dropdown-divider"></div>
-  <% if !current_user.partner? %>
-    <a class="dropdown-item" target="_blank" href="https://www.facebook.com/groups/615063885673363">Writer Facebook Group
-      <svg width="14px" height="14px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="external-link" class="mb-1 svg-inline--fa fa-external-link fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM474.67,0H316a28,28,0,0,0-28,28V46.71A28,28,0,0,0,316.79,73.9L384,72,135.06,319.09l-.06.06a24,24,0,0,0,0,33.94l23.94,23.85.06.06a24,24,0,0,0,33.91-.09L440,128l-1.88,67.22V196a28,28,0,0,0,28,28H484a28,28,0,0,0,28-28V37.33h0A37.33,37.33,0,0,0,474.67,0Z"></path></svg>
-    </a>
-  <% end %>
   <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
 </div>
