--- a/app/views/users/editors.html.erb
+++ b/app/views/users/editors.html.erb
@@ -20,7 +20,11 @@
         <% end %>
         <div class="info">
           <h2 style="margin-bottom: 5px; display: inline;">
-            <%= link_to(user.full_name, "/editors/#{user.slug}") %>
+            <% if current_user.admin? %>
+              <%= link_to(user.full_name, "/editors/#{user.slug}") %>
+            <% else %>
+              <%= link_to(user.full_name, user) %>
+            <% end %>
           </h2>
           <% if user.badges.present? %>
             <div class="badge_wrapper">
