--- a/app/views/users/interviewers.html.erb
+++ b/app/views/users/interviewers.html.erb
@@ -4,7 +4,7 @@
 <div id="posts_wrapper" class="skinny_wrapper mb-4">
   <div class="flex_horizontal">
     <%= form_for(:search, method: :get, :html => {:class => 'form-inline d-flex justify-content-left md-form form-sm active-theme-2 mt-2'}) do |f| %>
-      <%= f.text_field :query, class: "form-control form-control-sm mr-3", style: "flex: 1;", placeholder: "Search for an editor" %>
+      <%= f.text_field :query, class: "form-control form-control-sm mr-3", style: "flex: 1;", placeholder: "Search for an interviewer" %>
     <% end %>
   </div>
   <% if @query.present? %>
@@ -20,7 +20,7 @@
           <% end %>
           <div class="info">
           <h2 style="margin-bottom: 5px; display: inline;">
-            <%= link_to(user.full_name, "/editors/#{user.slug}") %>
+            <%= link_to(user.full_name, user) %>
           </h2>
           <% if user.badges.present? %>
             <div class="badge_wrapper">
