--- a/app/views/pitches/_pitch_interview_card.html.erb
+++ b/app/views/pitches/_pitch_interview_card.html.erb
@@ -15,7 +15,7 @@
       <% end %>
     <% end %>
     <h4 class="pitch_ttl">
-      <%= link_to "Interview with #{pitch.title}#{" (" << pitch.interview_kind << ")" unless pitch.interview_kind.nil?}", pitch, style: "color: black; text-decoration: none;" %>
+      <%= link_to "Interview with #{pitch.title}#{" (" << pitch.interview_kind << ")" if pitch.interview_kind.present?}", pitch, style: "color: black; text-decoration: none;" %>
     </h4>
     <p class="card-text"> Pitched on <%= pitch.created_at.strftime("%m-%d-%Y") %></p>
     <% if pitch.following_level.present? && (!pitch.following_level.eql? 'less than 25k')%>
