--- a/app/views/users/extensions.html.erb
+++ b/app/views/users/extensions.html.erb
@@ -1,57 +1,59 @@
 <div class="category mb-4">
   <div class="category--show">
-   <div class="other--articles">
-     <div class="flex">
+    <div class="other--articles">
+      <div class="flex">
         <div class="container" id="sharing_with_partners">
-           <h3>Use an Extension</h3>
-           <b><i>You currently have <%= current_user.extensions %> extension credit(s) available.</i></b>
-           <p>*Note that an article must be <b>In Progress</b> to use an extension. Read more about extensions <a href="/writing-the-perfect-article#deadlines-and-extensions">here</a>.</p>
-           <div class="flex_horizontal">
-             <%= form_for(:search, method: :get, :html => {:class => 'form-inline d-flex justify-content-left md-form form-sm active-theme-2 mt-2'}) do |f| %>
-               <%= f.text_field :query, class: "form-control form-control-sm mr-3", style: "flex: 1;", placeholder: "Searching in your article drafts" %>
-             <% end %>
-           </div>
-           <% if @query.present? %>
-             <h2>Search for draft... <span style="background-color: #FCD04D"><%= @query %></span></h2>
-             <br>
-           <% end %>
-           <% if @posts.present? %>
-             <div class="flex-wrapper flex-drafts">
-               <% @posts.each do |draft| %>
-                 <div class="card" style="width: 32%;">
-                   <a href="<%= post_path(draft)%>">
-                     <%=image_tag(draft.thumbnail.variant(resize_to_fill: [540, 340], format: 'webp'), alt: draft.title, :class => "card-img-top")%>
-                   </a>
-                   <div class="card-body">
-                     <% if draft.deadline_at.present? %>
-                       <%= render "pitches/deadline_warning_msg", post: draft %>
-                     <% end %>
-                     <h4 class="draft_ttl"><%= link_to draft.title, draft, style: "color: black; text-decoration: none;" %></h4>
-                     <p class="card-text"> <%= draft.pitch.description.truncate_words(20) %></p>
-                     <% @class = @extensions < 1 ? "disabled" : "" %>
-                     <%= form_for draft do |f| %>
-                     <%= f.hidden_field :deadline_at, value: draft.deadline_at + 14.days unless draft.deadline_at.nil? %>
+          <h3>Use an Extension</h3>
+          <b><i>You currently have <%= current_user.extensions %> extension credit(s) available.</i></b>
+          <p>*Note that an article must be <b>In Progress</b> to use an extension. Read more about extensions <a href="/writing-the-perfect-article#deadlines-and-extensions">here</a>.</p>
+          <div class="flex_horizontal">
+            <%= form_for(:search, method: :get, :html => {:class => 'form-inline d-flex justify-content-left md-form form-sm active-theme-2 mt-2'}) do |f| %>
+              <%= f.text_field :query, class: "form-control form-control-sm mr-3", style: "flex: 1;", placeholder: "Searching in your article drafts" %>
+            <% end %>
+          </div>
+          <% if @query.present? %>
+            <h2>Search for draft... <span style="background-color: #FCD04D"><%= @query %></span></h2>
+            <br>
+          <% end %>
+          <% if @posts.present? %>
+            <div class="flex-wrapper flex-drafts">
+              <% @posts.each do |draft| %>
+                <div class="card" style="width: 32%;">
+                  <% if draft.thumbnail.attached? %>
+                    <a href="<%= post_path(draft)%>">
+                      <%=image_tag(draft.thumbnail.variant(resize_to_fill: [540, 340], format: 'webp'), alt: draft.title, :class => "card-img-top")%>
+                    </a>
+                  <% end %>
+                  <div class="card-body">
+                    <% if draft.deadline_at.present? %>
+                      <%= render "pitches/deadline_warning_msg", post: draft %>
+                    <% end %>
+                    <h4 class="draft_ttl"><%= link_to draft.title, draft, style: "color: black; text-decoration: none;" %></h4>
+                    <p class="card-text"> <%= draft.pitch.description.truncate_words(20) %></p>
+                    <% @class = @extensions < 1 ? "disabled" : "" %>
+                    <%= form_for draft do |f| %>
+                      <%= f.hidden_field :deadline_at, value: draft.deadline_at + 14.days unless draft.deadline_at.nil? %>
                       <%= f.fields_for :user, @user do |d| %>
                         <%= d.hidden_field :extensions, value: @extensions - 1 %>
                       <% end %>
                       <div class="btn_cntnr mb-0 pb-0">
                         <span data-toggle="tooltip" title="<% if @class.eql? "disabled" %>You don't have any more credits<% end %>" style="float: right;">
-                           <%= f.submit 'Use Promotion',
+                          <%= f.submit 'Use Promotion',
                             data: {confirm: "You are using 1 credit to extend #{draft.title}'s deadline by 14 days. Do you want to continue?"},
                             class: "mt-0 btn btn-primary #{@class}", id: "btn_dark" %>
                         </span>
                       </div>
-                     <% end %>
-                   </div>
-                 </div>
-                <% end %>
-              </div>
-              <%== pagy_nav(@pagy).html_safe %>
-            <% else %>
-              <p style="margin-top: -10px;">Your search did not have any results.</p>
-            <% end %>
-         </div>
-       </div>
-   </div>
+                    <% end %>
+                  </div>
+                </div>
+              <% end %>
+            </div>
+            <%== pagy_nav(@pagy).html_safe %>
+          <% else %>
+            <p style="margin-top: -10px;">Your search did not have any results.</p>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
