--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -1,544 +1,535 @@
 .div {
-  height: 300px;
-  width: 100%;
-  overflow: hidden;
-  z-index: 0;
-  position: absolute;
+    height: 300px;
+    width: 100%;
+    overflow: hidden;
+    z-index: 0;
+    position: absolute;
 }
 
 .post_image {
-  height: 320px;
-  position: absolute;
-  background-position: center;
-  width: 105%;
-  margin-left: -10px;
-  margin-top: -10px;
-  background-size: cover;
-  position: absolute;
-  -webkit-filter: blur(2px);
-  z-index: 0;
-  -moz-filter: blur(2px);
-  -o-filter: blur(2px);
-  -ms-filter: blur(2px);
-  filter: blur(2px);
+    height: 320px;
+    position: absolute;
+    background-position: center;
+    width: 105%;
+    margin-left: -10px;
+    margin-top: -10px;
+    background-size: cover;
+    position: absolute;
+    -webkit-filter: blur(2px);
+    z-index: 0;
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);
+    filter: blur(2px);
 }
 
 .flex_wrapper_content {
-  display: flex;
-  flex-direction: row;
-  .post_wrapper {
-    flex-grow: 5;
-    max-width: 100%;
-  }
+    display: flex;
+    flex-direction: row;
+    .post_wrapper {
+        flex-grow: 5;
+        max-width: 100%;
+    }
 }
 
 .articles {
-  .title {
-    border-bottom: 1px dotted #9a9da4;
-  }
-  .title,
-  .title a {
-    color: #4abeb6;
-    margin-bottom: 10px;
-    padding-bottom: 10px;
-    text-shadow: 0.5px 0.5px #191919;
-    font-family: "Roboto Condensed Bold", sans-serif;
-    text-decoration: none;
-  }
-  figure {
-    margin: 0 !important;
-  }
-  .flex_other_articles {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    padding: 15px;
-    h3 {
-      margin: 10px 0;
-      padding: 0 20px 0 0px;
+    .title {
+        border-bottom: 1px dotted #9a9da4;
     }
-    .ctgry_article {
-      display: flex;
-      flex-direction: row;
-      margin: 10px 0;
-      img {
-        width: 130px;
-        height: 80px;
-        object-fit: cover;
-        z-index: 1;
-        position: relative;
-        background-size: cover;
-      }
-      p {
-        font-size: 1em;
-        margin: 0;
-        margin-left: 15px;
-        line-height: 1.4 !important;
+    .title,
+    .title a {
+        color: #4abeb6;
+        margin-bottom: 10px;
+        padding-bottom: 10px;
+        text-shadow: 0.5px 0.5px #191919;
         font-family: "Roboto Condensed Bold", sans-serif;
-        font-style: italic;
-        a {
-          color: #191919;
-          text-decoration: none;
-        }
-      }
+        text-decoration: none;
     }
-  }
+    figure {
+        margin: 0 !important;
+    }
+    .flex_other_articles {
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+        padding: 15px;
+        h3 {
+            margin: 10px 0;
+            padding: 0 20px 0 0px;
+        }
+        .ctgry_article {
+            display: flex;
+            flex-direction: row;
+            margin: 10px 0;
+            img {
+                width: 130px;
+                height: 80px;
+                object-fit: cover;
+                z-index: 1;
+                position: relative;
+                background-size: cover;
+            }
+            p {
+                font-size: 1em;
+                margin: 0;
+                margin-left: 15px;
+                line-height: 1.4 !important;
+                font-family: "Roboto Condensed Bold", sans-serif;
+                font-style: italic;
+                a {
+                    color: #191919;
+                    text-decoration: none;
+                }
+            }
+        }
+    }
 }
 
 .comment li {
-  padding: 0 !important;
+    padding: 0 !important;
 }
 
 .form_inline_wrapper {
-  margin-top: 0 !important;
-  img {
-    position: absolute;
-  }
-  .li-content {
-    padding-left: 45px;
-  }
+    margin-top: 0 !important;
+    img {
+        position: absolute;
+    }
+    .li-content {
+        padding-left: 45px;
+    }
 }
 
 .comment_form_wrapper {
-  display: block !important;
-  margin-top: 20px;
-  img {
-    position: absolute;
-  }
+    display: block !important;
+    margin-top: 20px;
+    img {
+        position: absolute;
+    }
+    #new_comment {
+        input {
+            border-radius: 5px;
+        }
+    }
 }
 
 .reply_form_wrapper {
-  padding: 0 0 0 45px !important;
-  position: relative;
-  max-width: 100% !important;
-  img {
-    position: relative !important;
-  }
-  .form_inline_wrapper .li-content {
-    margin-top: -35px;
-  }
+    padding: 0 0 0 45px !important;
+    position: relative;
+    max-width: 100% !important;
+    // .form_inline_wrapper .li-content {
+    //     margin-top: -35px;
+    // }
 }
 
 .modal .comment_form_wrapper {
-  padding: 0 1rem !important;
+    padding: 0 1rem !important;
 }
 
 .comment_form_wrapper {
-  padding: 0 !important;
-  form {
-    padding: 10px 0 0 45px !important;
-    position: relative;
-    max-width: 100% !important;
-  }
-  #comment_field,
-  #comment_field_reply {
-    outline: 0;
-    margin: 0 !important;
-    border-width: 2px !important;
-    border-color: #e9e9e9;
-    padding: 5px !important;
-    border-radius: 5px;
-    min-height: 96px;
-    height: 96px;
-  }
-  #comment_field:focus,
-  #comment_field_reply:focus {
-    border-color: #4abeb6;
-  }
+    padding: 0 !important;
+    form {
+        padding: 10px 0 0 45px !important;
+        position: relative;
+        max-width: 100% !important;
+    }
+    #comment_field,
+    #comment_field_reply {
+        outline: 0;
+        margin: 0 !important;
+        border-width: 2px !important;
+        border-color: #e9e9e9;
+        padding: 5px !important;
+        border-radius: 5px;
+        min-height: 96px;
+        height: 96px;
+    }
+    #comment_field:focus,
+    #comment_field_reply:focus {
+        border-color: #4abeb6;
+    }
 }
 
 .share_article_feedback {
-  h3 {
-    margin: 0;
-    font-family: "Playfair Display";
-  }
-  .comments {
-    #anchor_link:hover,
-    #anchor_link:hover i {
-      color: #212529 !important;
-      transition: color 0.6s ease !important;
-      cursor: pointer;
+    h3 {
+        margin: 0;
+        font-family: "Playfair Display";
     }
-    .fa-quote {
-      font-size: 10px;
-      color: #a6a09e;
-    }
-    .reply_form_wrapper {
-      display: none;
-    }
-    .submit_comment {
-      width: 35px;
-      height: 35px;
-      border: none;
-      padding: 0;
-      float: right;
-      margin-bottom: 10px;
-      &:hover {
-        cursor: pointer;
-      }
-      &:focus {
-        outline: none;
-      }
-    }
-    i {
-      line-height: 1.5;
-      color: black;
-    }
-    ul {
-      padding-left: 0;
-      margin: 0;
-      width: 100%;
-      position: relative;
-      li {
-        padding: 8px 0;
-        font-size: 14px;
-        margin-right: 0;
-        span {
-          word-wrap: break-word;
+    .comments {
+        #anchor_link:hover,
+        #anchor_link:hover i {
+            color: #212529 !important;
+            transition: color 0.6s ease !important;
+            cursor: pointer;
         }
-        h6 {
-          margin: 0;
-          line-height: 1.5;
-          font-size: 12px;
-          a {
-            color: black !important;
-          }
+        .fa-quote {
+            font-size: 14px;
+            color: #a6a09e;
         }
-        .date_ago {
-          font-size: 12px;
+        .reply_form_wrapper {
+            display: none;
         }
-        #toggle:hover {
-          cursor: pointer;
+        .submit_comment {
+            width: 35px;
+            height: 35px;
+            border: none;
+            padding: 0;
+            float: right;
+            margin-bottom: 10px;
+            &:hover {
+                cursor: pointer;
+            }
+            &:focus {
+                outline: none;
+            }
         }
-      }
+        i {
+            line-height: 1.5;
+            color: black;
+        }
+        ul {
+            padding-left: 0;
+            margin: 0;
+            width: 100%;
+            position: relative;
+            li {
+                padding: 8px 0;
+                font-size: 16px;
+                margin-right: 0;
+                span {
+                    word-wrap: break-word;
+                }
+                h6 {
+                    margin: 0;
+                    line-height: 1.5;
+                    font-size: 16px;
+                    a {
+                        color: black !important;
+                    }
+                }
+                .date_ago {
+                    font-size: 16px;
+                }
+                #toggle:hover {
+                    cursor: pointer;
+                }
+            }
+        }
+        a {
+            text-decoration: none;
+            height: fit-content;
+        }
     }
-    a {
-      text-decoration: none;
-      height: fit-content;
-    }
-  }
 }
 
 .text_field {
-  outline: 0;
-  border-width: 0 0 2px !important;
-  border-color: #e9e9e9;
-  margin: 0 !important;
-  padding: 5px !important;
+    outline: 0;
+    border-width: 0 0 2px !important;
+    border-color: #e9e9e9;
+    margin: 0 !important;
+    padding: 5px !important;
 }
+
 .text_field:focus {
-  border-color: #4abeb6;
+    border-color: #4abeb6;
 }
 
 .post_apply {
-  padding: 15px 0px;
-  .ads_wrapper {
-    margin-bottom: 20px;
-  }
+    padding: 15px 0px;
+    .ads_wrapper {
+        margin-bottom: 20px;
+    }
 }
 
 .share_article_feedback {
-  padding: 20px;
-  .newpost--new--profile {
-    margin: 0 !important;
-  }
+    padding: 20px;
+    .newpost--new--profile {
+        margin: 0 !important;
+    }
 }
 
 .share_article_feedback {
-  background-color: white;
+    background-color: white;
 }
 
 .post_apply,
-.share_article_feedback {
-  min-width: 330px;
-  max-width: 330px;
-  z-index: 30;
-  margin: 240px 20px 0 20px;
-  img {
-    width: 100%;
-  }
+.share_article_feedback_skinny {
+    min-width: 330px;
+    max-width: 330px;
+    z-index: 30;
+    margin: 240px 20px 0 20px;
+    img {
+        width: 100%;
+    }
 }
 
 .flex_wrapper_posts {
-  max-width: 1300px;
-  margin: 0 auto;
+    max-width: 1300px;
+    margin: 0 auto;
 }
 
 .flex_wrapper_columns {
-  display: flex;
-  flex-direction: row;
-  margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
 }
 
 .content_wrapper {
-  max-width: 736px;
+    max-width: 736px;
 }
 
 .skinny {
-  margin-left: 100px;
-  margin-right: 100px;
-  flex-grow: 1;
-  max-width: 100%;
+    margin-left: 100px;
+    margin-right: 100px;
+    flex-grow: 1;
+    max-width: 100%;
 }
 
 #posts_wrapper {
-  .post {
-    text-align: center;
-    .date {
-      font-size: 0.9em;
-      margin: 0;
-    }
-    h2 {
-      margin: 0;
-      font-size: 2em;
-      text-transform: uppercase;
-      a {
-        font-weight: bold;
-        text-decoration: none;
-        color: #424653;
-        &:hover {
-          color: #4abeb6;
+    .post {
+        text-align: center;
+        .date {
+            font-size: 0.9em;
+            margin: 0;
         }
-      }
+        h2 {
+            margin: 0;
+            font-size: 2em;
+            text-transform: uppercase;
+            a {
+                font-weight: bold;
+                text-decoration: none;
+                color: #424653;
+                &:hover {
+                    color: #4abeb6;
+                }
+            }
+        }
     }
-  }
 }
 
 #post_title_show {
-  z-index: 100;
-  background-color: white;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 200px;
-  display: block;
-  position: relative;
-  z-index: 0;
-  padding: 10px 30px 0 30px;
-
-  #category_title {
-    font-size: inherit;
-    a {
-      font-family: "Roboto Condensed Light";
-      color: #212529;
-      margin-bottom: 0.5rem !important;
-      &:hover {
-        text-decoration: none;
-        color: inherit;
-      }
+    z-index: 100;
+    background-color: white;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 200px;
+    display: block;
+    position: relative;
+    z-index: 0;
+    padding: 10px 30px 0 30px;
+    #category_title {
+        font-size: inherit;
+        a {
+            font-family: "Roboto Condensed Light";
+            color: #212529;
+            margin-bottom: 0.5rem !important;
+            &:hover {
+                text-decoration: none;
+                color: inherit;
+            }
+        }
     }
-  }
-  .authors {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-
-  .one_author {
-    display: flex;
-    flex-direction: row;
-  }
-
-  .title_wrapper {
-    margin-top: 30px;
-    margin-bottom: 15px;
-  }
-
-  h1 {
-    color: #4abeb6;
-    text-shadow: 1px 1px #191919;
-    font-size: 50px;
-    font-family: "Roboto Condensed Bold", sans-serif;
-  }
-  h3 a {
-    font-size: 15px;
-    font-family: "Roboto Condensed Bold", sans-serif;
-    margin: 0;
-    margin-top: 23px;
-    font-weight: lighter;
-    text-transform: uppercase;
-    a {
-      text-decoration: none;
-      color: #333;
+    .authors {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
     }
-  }
+    .one_author {
+        display: flex;
+        flex-direction: row;
+    }
+    .title_wrapper {
+        margin-top: 30px;
+        margin-bottom: 15px;
+    }
+    h1 {
+        color: #4abeb6;
+        text-shadow: 1px 1px #191919;
+        font-size: 50px;
+        font-family: "Roboto Condensed Bold", sans-serif;
+    }
+    h3 a {
+        font-size: 15px;
+        font-family: "Roboto Condensed Bold", sans-serif;
+        margin: 0;
+        margin-top: 23px;
+        font-weight: lighter;
+        text-transform: uppercase;
+        a {
+            text-decoration: none;
+            color: #333;
+        }
+    }
 }
 
 // --------------- Posts Show
-
 #cke_1_contents {
-  min-height: 500px !important;
+    min-height: 500px !important;
 }
 
 #content {
-  padding: 0 30px;
-  .post_content {
-    br {
-      display: none;
+    padding: 0 30px;
+    .post_content {
+        br {
+            display: none;
+        }
+        padding-bottom: 20px;
+        img {
+            width: 70% !important;
+            height: auto !important;
+            margin: 25px auto !important;
+            display: block;
+        }
+        iframe {
+            margin: 0 auto !important;
+        }
+        html {
+            margin-left: auto;
+            margin-right: auto;
+        }
+        #twitter-widget-0,
+        #twitter-widget-1 {
+            margin: 0 auto !important;
+        }
+        a {
+            color: #4abeb6;
+        }
+        a:hover {
+            opacity: 0.5;
+        }
+        blockquote {
+            border-left: 5px solid #cccccc;
+            padding-left: 10px;
+        }
+        h1 span {
+            font-size: 2.5rem !important;
+        }
+        h2 span {
+            font-size: 2rem !important;
+        }
+        h3 span {
+            font-size: 1.75rem !important;
+        }
+        h4 span {
+            font-size: 1.375rem !important;
+        }
+        span h5 span {
+            font-size: 1.25rem !important;
+        }
+        h6 span {
+            font-size: 1rem !important;
+        }
+        @media (max-width: 600px) {
+            img {
+                width: 100% !important;
+            }
+        }
     }
-    padding-bottom: 20px;
-    img {
-      width: 70% !important;
-      height: auto !important;
-      margin: 25px auto !important;
-      display: block;
-    }
-    iframe {
-      margin: 0 auto !important;
-    }
-    html {
-      margin-left: auto;
-      margin-right: auto;
-    }
-    #twitter-widget-0,
-    #twitter-widget-1 {
-      margin: 0 auto !important;
-    }
-    a {
-      color: #4abeb6;
-    }
-    a:hover {
-      opacity: 0.5;
-    }
-    blockquote {
-      border-left: 5px solid #cccccc;
-      padding-left: 10px;
-    }
-    h1 span {
-      font-size: 2.5rem !important;
-    }
-
-    h2 span {
-      font-size: 2rem !important;
-    }
-
-    h3 span {
-      font-size: 1.75rem !important;
-    }
-
-    h4 span {
-      font-size: 1.375rem !important;
-    }
-    span h5 span {
-      font-size: 1.25rem !important;
-    }
-
-    h6 span {
-      font-size: 1rem !important;
-    }
-    @media (max-width: 600px) {
-      img {
-        width: 100% !important;
-      }
-    }
-  }
 }
 
 #share_box {
-  text-align: center;
-  p {
-    padding: 0 0 1em 0;
-    margin: 0;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: #424653;
-    font-size: 0.8em;
-  }
-  i {
-    color: #424653;
-    padding: 1em 1.5em;
-    &:hover {
-      color: #4abeb6;
-      cursor: pointer;
+    text-align: center;
+    p {
+        padding: 0 0 1em 0;
+        margin: 0;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #424653;
+        font-size: 0.8em;
     }
-  }
+    i {
+        color: #424653;
+        padding: 1em 1.5em;
+        &:hover {
+            color: #4abeb6;
+            cursor: pointer;
+        }
+    }
 }
 
 .category_title_trending {
-  opacity: 0.8;
-  transition: opacity 0.8s;
-  &:hover {
-    text-decoration: none;
-    color: inherit;
-    opacity: 0.55;
+    opacity: 0.8;
     transition: opacity 0.8s;
-  }
+    &:hover {
+        text-decoration: none;
+        color: inherit;
+        opacity: 0.55;
+        transition: opacity 0.8s;
+    }
 }
 
 // --------------- Pagination
-
 @media (max-width: 830px) {
-  .authors {
-    display: inline-block !important;
-    .second_author {
-      margin-top: 5px;
+    .authors {
+        display: inline-block !important;
+        .second_author {
+            margin-top: 5px;
+        }
     }
-  }
 }
 
 @media (max-width: 800px) {
-  .skinny {
-    iframe {
-      width: 100% !important;
+    .skinny {
+        iframe {
+            width: 100% !important;
+        }
+        #post_title_show {
+            padding: 1px 20px;
+            margin-bottom: 10px;
+            h1 {
+                font-size: 35px !important;
+            }
+        }
     }
-    #post_title_show {
-      padding: 1px 20px;
-      margin-bottom: 10px;
-      h1 {
-        font-size: 35px !important;
-      }
+    #content,
+    .post_apply {
+        padding: 0 15px !important;
     }
-  }
-
-  #content,
-  .post_apply {
-    padding: 0 15px !important;
-  }
-
-  .share_article_feedback {
-    padding: 0 40px !important;
-  }
-  .post_apply {
-    .contain_articles {
-      padding: 0 15px !important;
+    .share_article_feedback {
+        padding: 0 40px !important;
     }
-  }
+    .post_apply {
+        .contain_articles {
+            padding: 0 15px !important;
+        }
+    }
 }
 
 @media (max-width: 435px) {
-  .second_author {
-    margin-top: 0 !important;
-  }
+    .second_author {
+        margin-top: 0 !important;
+    }
 }
 
 @media (min-width: 1075px) and (max-width: 1240px) {
-  .authors {
-    display: inline-block !important;
-    .second_author {
-      margin-top: 5px;
+    .authors {
+        display: inline-block !important;
+        .second_author {
+            margin-top: 5px;
+        }
     }
-  }
 }
 
 @media (min-width: 1030px) {
-  .flex_wrapper_columns {
-    margin-left: 20px !important;
-  }
+    .flex_wrapper_columns {
+        margin-left: 20px !important;
+    }
 }
 
 @media (max-width: 448px) {
-  .skinny {
-    #post_title_show {
-      padding: 0px 15px;
-      .title_wrapper {
-        padding-top: 20px;
-      }
+    .skinny {
+        #post_title_show {
+            padding: 0px 15px;
+            .title_wrapper {
+                padding-top: 20px;
+            }
+        }
     }
-  }
-  #content {
-    padding: 0 15px;
-    p {
-      font-size: 17px;
+    #content {
+        padding: 0 15px;
+        p {
+            font-size: 17px;
+        }
     }
-  }
 }
