--- a/app/views/comments/_comment_following.html.erb
+++ b/app/views/comments/_comment_following.html.erb
@@ -1,9 +1,15 @@
 <li class="list-group-item comment" id="comment_<%=comment.id %>">
-  <% @profile_img = comment.user.profile.attached? ? image_tag(comment.user.profile.variant(resize_to_fill: [50, 50]), :class => "profile_img_small") : image_tag("profile_image.jpg", :class => "profile_img_small") %>
+  <% @profile_img = comment.user.present? && comment.user.profile.attached? ? image_tag(comment.user.profile.variant(resize_to_fill: [50, 50]), :class => "profile_img_small") : image_tag("profile_image.jpg", :class => "profile_img_small") %>
   <div class="li-content" style="width: 100%;">
     <%= link_to(@profile_img, comment.user) %>
-    <span><%= link_to comment.user.try(:full_name), comment.user, class: "link_nrml" %> also replied to <%= Comment.find(comment.comment_id).user.try(:full_name) %>'s comment <%= time_ago_in_words(comment.created_at) %> ago:
-    <span class="date_ago"><%= comment.text.truncate_words(12) %></span></span>
+    <span>
+      <% if comment.user_id.present? %>
+        <%= link_to comment.user.try(:full_name), comment.user, class: "link_nrml" %>
+      <% else %>
+        <%= comment.full_name %>
+      <% end %>
+      also replied to <%= Comment.find(comment.comment_id).user.try(:full_name) %>'s comment <%= time_ago_in_words(comment.created_at) %> ago:
+      <span class="date_ago"><%= comment.text.truncate_words(12) %></span></span>
   </div>
   <div class="li-link-wrapper">
     <%= link_to("", post_path(comment.post, :comment_id => comment.id)) %>
