--- a/app/views/posts/_draft.html.erb
+++ b/app/views/posts/_draft.html.erb
@@ -122,7 +122,7 @@
         </div>
       </div>
       <% if params[:shareable_token].nil? %>
-        <div class="share_article_feedback">
+        <div class="share_article_feedback share_article_feedback_skinny">
           <% if @post.partner_id.present? %>
             <%= render :partial => 'posts/partials/partner_comments', locals: {partner: @partner, post: @post, comments: @comments, comment: @comment} %>
           <% elsif @post.sharing %>
@@ -133,9 +133,9 @@
         </div>
       <% else %>
         <%= render 'posts/partials/side_bar_published', post: @post %>
-    </div>
-  <% end %>
-</div>
+      </div>
+    <% end %>
+  </div>
 </div>
 </div>
 <script type="text/javascript">
