--- a/app/views/posts/partials/_sharing_on.html.erb
+++ b/app/views/posts/partials/_sharing_on.html.erb
@@ -3,7 +3,7 @@
   <% if !(post.reviews.last.try(:status).eql? "In Progress") %>
     <i class="d-block mt-3 mb-3">Social sharing in the <%= link_to("writer community", "/community") %> has been paused while your article's status is <b><%= post.reviews.last.try(:status) %></b>.</i>
   <% end %>
-  <%= render :partial => 'comments/comment_form', locals: {post: post, comment: comment } %>
+  <%= render :partial => 'comments/comment_form', locals: {post: post, comment: comment, user: user } %>
   <ul class="list-group list-group-flush" id="list-group-comments">
     <% if (comments.count.eql? 0) && (post.reviews.last.try(:status).eql? "In Progress") %>
       <i class="mt-2">Social sharing is turned on! Your article is now viewable in the <%= link_to("writer community", "/community", class: "link_grn") %>.</i>
