promoting bug fixed and subscribe when comment and let user opt out of comments and require full name + 13 years old

--- a/app/views/badges/_new_badge_modal.html.erb
+++ b/app/views/badges/_new_badge_modal.html.erb
@@ -3,7 +3,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document" style="width: 800px; max-width: 95%;">
     <div class="modal-content">
       <div class="modal-body p-0">
-        <button type="button" class="close p-3 position-absolute" style="right: 0px;" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close p-3 position-absolute" style="right: 0px;" data-bs-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
         <% if @badge.present? %>
