--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <li class="list-group-item comment" id="comment_<%= comment.id %>" style="width: 100%;">
-  <% if (current_user.present? && ((comment.user_id.eql? current_user.id) || (comment.post.user_id.eql? current_user.id) || (current_user.admin))) || (!session[:cookie].nil? && (session[:cookie].eql? comment.cookie)) %>
+  <% if (current_user.present? && ((comment.user_id.eql? current_user.id) || (comment.post.user_id.eql? current_user.id) || (current_user.admin))) || (!cookies[:cookie].nil? && (cookies[:cookie].eql? comment.cookie)) %>
     <%= link_to comment_path(comment), method: :delete, data: {confirm: "Are you sure you want to delete this comment?"}, class: "delete_btn_x", :remote => true, :style => "width: 15px !important;right: 0;position: absolute;z-index: 10;" do %>
       <svg style="color: black;" width="14px" height="14px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" class="svg-inline--fa fa-times fa-w-11" role="img" viewBox="0 0 352 512"><path fill="currentColor" d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"></path></svg>
     <% end %>
@@ -35,13 +35,13 @@
     <% @reply_text = comment.comments.present? ? "Reply (#{comment.comments.count})" : "Reply" %>
     <% if comment.comment_id.nil? %>
       <span class="d-block">
-        <% if (current_user.present? && (comment.user_id.eql? current_user.id)) || (!current_user.present? && !session[:cookie].nil? && (session[:cookie].eql? comment.cookie)) %>
-          <p class="mr-2 d-inline link_theme"><%= link_to "Edit", edit_comment_path(comment, :cookie => session[:cookie]), remote: true, class: "link_theme", style: "font-size: 1em;" %></p>
+        <% if (current_user.present? && (comment.user_id.eql? current_user.id)) || (!current_user.present? && !cookies[:cookie].nil? && (cookies[:cookie].eql? comment.cookie)) %>
+          <p class="mr-2 d-inline link_theme"><%= link_to "Edit", edit_comment_path(comment, :cookie => cookies[:cookie]), remote: true, class: "link_theme", style: "font-size: 1em;" %></p>
         <% end %>
-        <p class="d-inline link_theme"><%= link_to @reply_text, new_comment_path(parent_id: comment.id, :cookie => session[:cookie]), remote: true, class: "link_theme toggle_#{comment.id}", style: "font-size: 1em;" %></p>
+        <p class="d-inline link_theme"><%= link_to @reply_text, new_comment_path(parent_id: comment.id, :cookie => cookies[:cookie]), remote: true, class: "link_theme toggle_#{comment.id}", style: "font-size: 1em;" %></p>
       </span>
-    <% elsif (current_user.present? && (comment.user_id.eql? current_user.id)) || (!current_user.present? && !session[:cookie].nil? && (session[:cookie].eql? comment.cookie)) %>
-      <p class="mr-2 mt-0 link_theme"><%= link_to "Edit", edit_comment_path(comment, :cookie => session[:cookie]), remote: true, class: "link_theme", style: "font-size: 1em;" %></p>
+    <% elsif (current_user.present? && (comment.user_id.eql? current_user.id)) || (!current_user.present? && !cookies[:cookie].nil? && (cookies[:cookie].eql? comment.cookie)) %>
+      <p class="mr-2 mt-0 link_theme"><%= link_to "Edit", edit_comment_path(comment, :cookie => cookies[:cookie]), remote: true, class: "link_theme", style: "font-size: 1em;" %></p>
     <% end %>
   </div>
 </li>
