--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -6,7 +6,7 @@
   <h3 class="pitch_ttl"><%= @title %> <i><%= "#{@pitch.title}#{' (' << @pitch.interview_kind << ')' if @pitch.interview_kind.present?}" %></i></h3>
   <p class="pitch_usr">Pitched <% if @pitch.user.present? %> by <%= link_to(@pitch.user.try(:full_name), @pitch.user, class: "pitch_btn") %> <% end %>under <%= link_to(@pitch.category.name, @pitch.category, class: "pitch_btn") %> on <%= @pitch.created_at.strftime("%m-%d-%Y") %> </p>
   <% if @claimed_user.present? %>
-    <p class="pitch_usr">Claimed by <%= link_to(@claimed_user.full_name, @claimed_user, class: "pitch_btn") %><%= " on #{@pitch.claimed_at.in_time_zone.strftime('%A, %B %d')}" unless @pitch.claimed_at.nil? %></p>
+    <p class="pitch_usr">Claimed by <%= link_to(@claimed_user.full_name, @claimed_user, class: "pitch_btn") %><%= ", #{date_to_words(@pitch.claimed_at)}" unless @pitch.claimed_at.nil? %></p>
   <% elsif @pitch.status.eql? "Approved" %>
     <p class="mb-3" style="background-color: #FCD04D; display: inline-block;">This pitch was approved<% if @pitch.editor_id.present?%> by <%= link_to(@editor.try(:full_name), @editor) %><% end %>! You may claim it to start your draft.</p>
   <% elsif @pitch.status.eql? "Rejected" %>
@@ -94,7 +94,7 @@
         <br>
       <% end %>
     <% else %>
-      <p class="pitch_usr">This pitch's <%= link_to("article", @article, class: "pitch_btn", target: "_blank") %> was published on <%= @article.publish_at.in_time_zone.strftime("%A, %B %d") %>.</p>
+      <p class="pitch_usr">This pitch's <%= link_to("article", @article, class: "pitch_btn", target: "_blank") %> was published on <%= date_to_words(@article.publish_at) %>.</p>
     <% end %>
   <% end %>
   <% if ((current_user.id.eql? @pitch.user&.id) || current_user.admin) && !@article&.is_published? %>
