--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,7 @@
       <% if @user.editor %>
         <span class="badge badge-default editor_label" style="top: 5px;">Editor</span>
       <% elsif @user.marketer %>
-          <span class="badge badge-default marketer_label" style="top: 5px;">Interviewer</span>
+        <span class="badge badge-default marketer_label" style="top: 5px;">Interviewer</span>
       <% end %>
     </div>
   </div>
@@ -18,44 +18,43 @@
   <div class="progress mt-3">
     <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
-  <p>You can use your points to promote your shared drafts and get more feedback from other writers.</p>
+  <p>Share your draft with the community by clicking "Turn on sharing" on your draft. You can use your points to promote your shared drafts and get more feedback from other writers.</p>
   <p>
-    Earn points by commenting on other writers' shared drafts or by
-    <%= link_to "inviting your friends to The Teen Magazine", "/writers/#{current_user.slug}/invitations", class: "link_grn" %>.
+    Earn points by commenting on other writers' shared drafts or published articles. You earn more points for longer, more thoughtful comments, and on drafts that are being promoted.
   </p>
   <% if @my_shared_drafts.count.eql? 0 %>
     <p class="mb-0"><i>You don't have any drafts that have sharing turned on.</i></p>
   <% else %>
     <div class="flex-wrapper flex-drafts">
       <% @my_shared_drafts.each do |draft| %>
-          <div class="card" style="width: 32%;">
-            <a href="<%= post_path(draft)%>">
-              <%= image_tag(draft.thumbnail.variant(resize_to_fill: [540, 340]), :class => "card-img-top") %>
-            </a>
-            <div class="card-body">
-              <p class="card-text">Sharing has been turned on for your draft <%= link_to(draft.title, draft) %>.</p>
+        <div class="card" style="width: 32%;">
+          <a href="<%= post_path(draft)%>">
+            <%= image_tag(draft.thumbnail.variant(resize_to_fill: [540, 340]), :class => "card-img-top") %>
+          </a>
+          <div class="card-body">
+            <p class="card-text">Sharing has been turned on for your draft <%= link_to(draft.title, draft) %>.</p>
+          </div>
+          <% if draft.promoting_until.present? && draft.promoting_until > Time.now %>
+            <div class="rounded-bottom lighten-3 text-right p-3" style="background-color: #FA8075">
+              <p class="list-inline-item pr-2 white-text"><svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire" class="mb-1 svg-inline--fa fa-fire fa-w-12" role="img" viewBox="0 0 384 512"><path fill="currentColor" d="M216 23.86c0-23.8-30.65-32.77-44.15-13.04C48 191.85 224 200 224 288c0 35.63-29.11 64.46-64.85 63.99-35.17-.45-63.15-29.77-63.15-64.94v-85.51c0-21.7-26.47-32.23-41.43-16.5C27.8 213.16 0 261.33 0 320c0 105.87 86.13 192 192 192s192-86.13 192-192c0-170.29-168-193-168-296.14z"></path></svg> Promoting ends in <%= time_ago_in_words(draft.promoting_until) unless draft.promoting_until.blank? %></p>
             </div>
-            <% if draft.promoting_until.present? && draft.promoting_until > Time.now %>
-              <div class="rounded-bottom lighten-3 text-right p-3" style="background-color: #FA8075">
-                <p class="list-inline-item pr-2 white-text"><svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire" class="mb-1 svg-inline--fa fa-fire fa-w-12" role="img" viewBox="0 0 384 512"><path fill="currentColor" d="M216 23.86c0-23.8-30.65-32.77-44.15-13.04C48 191.85 224 200 224 288c0 35.63-29.11 64.46-64.85 63.99-35.17-.45-63.15-29.77-63.15-64.94v-85.51c0-21.7-26.47-32.23-41.43-16.5C27.8 213.16 0 261.33 0 320c0 105.87 86.13 192 192 192s192-86.13 192-192c0-170.29-168-193-168-296.14z"></path></svg> Promoting ends in <%= time_ago_in_words(draft.promoting_until) unless draft.promoting_until.blank? %></p>
-              </div>
-            <% else %>
-              <div class="rounded-bottom lighten-3 text-right p-1">
-                <% @class = @points < 200 ? "disabled" : "" %>
-                  <%= form_for draft do |f| %>
-                    <% @initial = (draft.promoting_until.present? && draft.promoting_until > Time.now) ? draft.promoting_until : Time.now %>
-                    <%= f.hidden_field :promoting_until, value: @initial + 3.day %>
-                    <div class="btn_cntnr mb-0 pb-0 pr-3">
-                      <span data-toggle="tooltip" title="<% if @points < 200 %>Give feedback on more articles<% end %>">
-                        <%= f.submit 'Promote (200 points)',
+          <% else %>
+            <div class="rounded-bottom lighten-3 text-right p-1">
+              <% @class = @points < 200 ? "disabled" : "" %>
+              <%= form_for draft do |f| %>
+                <% @initial = (draft.promoting_until.present? && draft.promoting_until > Time.now) ? draft.promoting_until : Time.now %>
+                <%= f.hidden_field :promoting_until, value: @initial + 3.day %>
+                <div class="btn_cntnr mb-0 pb-0 pr-3">
+                  <span data-toggle="tooltip" title="<% if @points < 200 %>Give feedback on more articles<% end %>">
+                    <%= f.submit 'Promote (200 points)',
                           data: {confirm: "This draft will be featured for three days on the community page. You are using 200 points out of your available #{@points} points to do this. Do you want to continue?"},
                           class: "newpost--new--profile #{@class}" %>
-                      </span>
-                    </div>
-                  <% end %>
+                  </span>
                 </div>
-            <% end %>
-          </div>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
       <% end %>
     </div>
   <% end %>
@@ -115,17 +114,14 @@
   </div>
 </div>
 <div class="content_hint"></div>
-
 <% @fraction = @points.to_f / 200.0 %>
 <% @progress = @fraction >= 1 ? 1 : @fraction %>
-
 <style media="screen">
   .complete {
     width: <%= @progress * 100 %>% !important;
     transition-duration: 2s;
   }
 </style>
-
 <script type="text/javascript">
   $(document).ready(function() {
     $('.progress-bar').addClass("complete");
