--- a/app/views/welcome/categories/_category_2.html.erb
+++ b/app/views/welcome/categories/_category_2.html.erb
@@ -3,8 +3,7 @@
     <div class="ctgry_article">
       <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), alt: post.title), post )%>
       <h1><%= link_to post.title, post %></h1>
-      <p><%= post.publish_at.in_time_zone.strftime("%A, %b %d")%></p>
-      <p class="meta"><%= post.meta_description.truncate_words(15) %></p>
+      <p><%= date_to_words(post.publish_at) %></p>
     </div>
   <% end %>
 </div>
